Handle CORS and OPTIONS requests with authentication. prevent insert user with already exists email address

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,5 +5,5 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/annual-project
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
