--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,3 +7,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/annual-project
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+# HTTPS Configuration
+server.port=8443
+server.ssl.key-store=keystore.p12
+server.ssl.key-store-password=270195Boy77
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=tomcat
