add nexus configuration

--- a/pom.xml
+++ b/pom.xml
@@ -82,5 +82,17 @@
 		</plugins>
 	</build>
 
+	<distributionManagement>
+		<repository>
+			<id>internal.repo</id>
+			<name>Nexus Repository</name>
+			<url>http://fouan.ddns.net:8081</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshot.repo</id>
+			<name>Nexus Repository</name>
+			<url>http://fouan.ddns.net:8081</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 </project>
