--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,4 +1,4 @@
-# This is a sample build configuration for Java – Maven.
+# This is a sample build configuration for Java ï¿½ Maven.
 # Check our guides at https://confluence.atlassian.com/x/zd-5Mw for more examples.
 # Only use spaces to indent your .yml configuration.
 # -----
@@ -13,6 +13,6 @@ pipelines:
   branches:
     develop:
       - step:
-        script:
-          - mvn clean install
-          - mvn deploy
+          script:
+            - mvn clean install
+            - mvn deploy
