--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,5 +14,5 @@ pipelines:
     develop:
       - step:
           script:
-            - mvn clean install
+            - cp /opt/atlassian/pipelines/agent/build/settings.xml $HOME/.m2/settings.xml
             - mvn deploy
