--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.esgi</groupId>
 	<artifactId>annual-project-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>annual-project-api</name>
@@ -79,20 +79,53 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>${maven-deploy-plugin.version}</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.5.1</version>
+                <executions>
+                    <execution>
+                        <id>default-deploy</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <serverId>internal.repo</serverId>
+                    <nexusUrl>http://192.168.2.11:8081/nexus/</nexusUrl>
+                    <skipStaging>true</skipStaging>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
 	<distributionManagement>
 		<repository>
 			<id>internal.repo</id>
-			<name>Nexus Repository</name>
-			<url>http://fouan.ddns.net:8081</url>
+			<!--<name>annual-project-repository</name>-->
+			<url>http://192.168.2.11:8081/nexus/content/repositories/internal.repo</url>
 		</repository>
+        <!--
 		<snapshotRepository>
 			<id>snapshot.repo</id>
 			<name>Nexus Repository</name>
 			<url>http://fouan.ddns.net:8081</url>
 		</snapshotRepository>
+		-->
 	</distributionManagement>
+
+
 
 </project>
