--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,5 +20,4 @@ pipelines:
     manual:
       - step:
           script:
-            - mvn -s settings.xml
-            - mvn deploy
+            - mvn -s settings.xml deploy
