--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,6 +11,6 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 # HTTPS Configuration
 server.port=8443
 server.ssl.key-store=keystore.p12
-server.ssl.key-store-password=270195Boy77
+server.ssl.key-store-password=**********
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
